# preference-futures

./: .gitignore  README.md  pyproject.toml
docs/: CLAIMS.md
scripts/: 00-setup.ps1  01-check.ps1  02-parse-powershell.ps1  10-newsedits-inspect.ps1  100-train-editorial-mrq.ps1  101-score-swapped-oracle.ps1  102-aggregate-editorial-mrq.ps1  103-prepare-editorial-mrq-transfer.ps1  104-run-editorial-mrq-transfer.ps1  105-aggregate-editorial-mrq-transfer.ps1  106-audit-editorial-mrq-transfer.ps1  107-prepare-editorial-mrq-matched-controls.ps1  108-run-editorial-mrq-matched-controls.ps1  109-aggregate-editorial-mrq-matched-controls.ps1  11-newsedits-smoke.ps1  110-prepare-editorial-mrq-shuffled-control.ps1  111-train-editorial-mrq-shuffled-source.ps1  112-run-editorial-mrq-shuffled-transfer.ps1  113-aggregate-editorial-mrq-shuffled-control.ps1  114-prepare-editorial-mrq-xgboost.ps1  115-run-editorial-mrq-xgboost.ps1  116-aggregate-editorial-mrq-xgboost.ps1  12-newsedits-full.ps1  13-newsedits-verify.ps1  14-context-viability-audit.ps1  15-numeric-shortcut-audit.ps1  20-current-smoke-pipeline.ps1  30-reproduce-blog-evidence.ps1  40-build-grouped-splits.ps1  41-verify-grouped-splits.ps1  50-build-compute-matched-corpora.ps1  50-build-training-corpora.ps1  51-verify-compute-matched-corpora.ps1  60-prepare-fixed-budget-training.ps1  61-step3-smoke.ps1  62-train-fixed-budget-representations.ps1  63-verify-fixed-budget-training.ps1  64-build-step3-fold0-summary.ps1  70-freeze-source-task-encoders.ps1  80-prepare-frozen-representations.ps1  (+16 more)
tests/: test_compute_matched_corpora.py  test_confirmatory_milestone.py  test_context_viability_audit.py  test_editorial_mrq.py  test_encoder_selection.py  test_episodes.py  test_fixed_budget_training.py  test_frozen_representations.py  test_grouped_split_manifests.py  test_grouped_split_verification.py  test_identical_future_probes.py  test_newsedits_adapter.py  test_numeric_shortcut_audit.py  test_split_sentence_preservation.py  test_step7_diagnostics.py  test_step8_aggregate.py  test_step8_matched_controls.py  test_step8_shuffled_control.py  test_step8_specificity.py  test_step8_transfer.py  test_step8_xgboost_combined.py  test_training_corpora.py  test_training_runtime_integration.py
(+124 files in other folders)
