[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "preference-futures"
version = "0.1.0"
description = "Research tools for preference-to-future transfer experiments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ernan Hughes" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
train = [
  "torch>=2.6",
  "transformers>=5.0,<6",
  "huggingface-hub>=0.30",
  "safetensors>=0.5",
]

[project.scripts]
preference-futures-newsedits = "preference_futures.newsedits.cli:main"
preference-futures-audit = "preference_futures.audit.cli:main"
preference-futures-numeric-audit = "preference_futures.audit.numeric_cli:main"
preference-futures-splits = "preference_futures.splits.cli:main"
preference-futures-corpora = "preference_futures.corpora.cli:main"
preference-futures-verify-corpora = "preference_futures.corpora.verify_cli:main"
preference-futures-train = "preference_futures.training.cli:main"
preference-futures-select-encoders = "preference_futures.selection.cli:main"
preference-futures-representations = "preference_futures.representations.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
